# panda3d_dynmesh

./: LICENSE  README.md  pyproject.toml  requirements.txt
dynmesh/: __init__.py  base.py  core.py  dyn_mesh.py  math.py  mesh_generation.py  settings.py
dynmesh/tests/: test_dyn_mesh__math.py  test_dyn_mesh__type_validation.py  test_dyn_mesh_core.py
